--- a/less/tablet.less
+++ b/less/tablet.less
@@ -1,15 +1,15 @@
 @import "__variables.less";
 @import "__mixins.less";
 .header {
-    min-height: 505px;
-    background-image: url(../img/bg1_3.jpg);
+    min-height: 415px;
+    background-image: url(../img/bg1_2.jpg);
     background-repeat: no-repeat;
     background-position: top;
     background-color: @mainWhite;
 }
 
 .wrap {
-    width: @mobileWrap;
+    width: @tabletWrap;
     margin: 0 auto;
 }
 
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: space-between;
 }
+
 .logo {
     height: 29px;
 }
@@ -24,31 +25,47 @@
     padding-top: 27px;
     
 }
-
-.headerBurger {
-    color: @mainWhite;
-    
+.headerMainMenu {
+    flex-grow: 1;
+    padding-left: 20px;
+    padding-top: 8px;
 }
-
-.mainMenuItems {
+.headerBurger {
     display: none;
 }
 
+.mainMenuItems {
+   
+    display: flex;
+    justify-content: space-between;
+}
+.mainMenuItem {
+    list-style-type: none;
+}
+.mainMenuLink {
+    .siteLinks .headerLink();  
+}
+
 .headerSendContainer {
-    margin-top: 240px;
+    margin-top: 60px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 400px;
 }
 
 .headerHeading {
     text-transform: uppercase;
+    font-size: 44px;
     margin-bottom: 10px;
+    color: @mainWhite;
     
 }
 .headerDescribe {
-    font-weight: 600;
-    margin-bottom: 20px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    font-size: 26px;
+    color: @mainWhite;
 }
 .sendButton {
     .buttonStyle .mobile();
