--- a/less/tablet.css
+++ b/less/tablet.css
@@ -2,14 +2,14 @@
 /* Colors */
 /* Sizes */
 .header {
-  min-height: 505px;
-  background-image: url(../img/bg1_3.jpg);
+  min-height: 415px;
+  background-image: url(../img/bg1_2.jpg);
   background-repeat: no-repeat;
   background-position: top;
   background-color: #ffffff;
 }
 .wrap {
-  width: 280px;
+  width: 700px;
   margin: 0 auto;
 }
 .headerMenu {
@@ -22,25 +22,46 @@
 .headerPadding {
   padding-top: 27px;
 }
-.headerBurger {
-  color: #ffffff;
+.headerMainMenu {
+  flex-grow: 1;
+  padding-left: 20px;
+  padding-top: 8px;
 }
-.mainMenuItems {
+.headerBurger {
   display: none;
 }
+.mainMenuItems {
+  display: flex;
+  justify-content: space-between;
+}
+.mainMenuItem {
+  list-style-type: none;
+}
+.mainMenuLink {
+  text-decoration: none;
+  color: #ffffff;
+  text-transform: capitalize;
+  font-weight: 400;
+  font-size: 14px;
+}
 .headerSendContainer {
-  margin-top: 240px;
+  margin-top: 60px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 400px;
 }
 .headerHeading {
   text-transform: uppercase;
+  font-size: 44px;
   margin-bottom: 10px;
+  color: #ffffff;
 }
 .headerDescribe {
-  font-weight: 600;
-  margin-bottom: 20px;
+  font-weight: 700;
+  margin-bottom: 40px;
+  font-size: 26px;
+  color: #ffffff;
 }
 .sendButton {
   width: 278px;
