--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body {
   font-family: 'Myriad Pro', sans-serif;
 }
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .header {
     min-height: 505px;
     background-image: url(../img/bg1_3.jpg);
@@ -20,9 +20,281 @@ body {
     width: 280px;
     margin: 0 auto;
   }
+  .headerMenu {
+    display: flex;
+    justify-content: space-between;
+  }
+  .logo {
+    height: 29px;
+  }
+  .headerPadding {
+    padding-top: 27px;
+  }
+  .headerBurger {
+    color: #ffffff;
+  }
+  .mainMenuItems {
+    display: none;
+  }
+  .headerSendContainer {
+    margin-top: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .headerHeading {
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+  .headerDescribe {
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+  .sendButton {
+    width: 278px;
+    height: 48px;
+    background-color: #008DCD;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 24px;
+    text-align: right;
+    padding: 10px 20px;
+    border: none;
+  }
+  .about {
+    background-color: #f7f7f7;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .aboutBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .aboutImage {
+    width: 278px;
+    margin-bottom: 20px;
+  }
+  .aboutHeading {
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  .aboutDesc {
+    font-weight: 400px;
+    font-size: 12px;
+    margin-bottom: 20px;
+  }
 }
-@media (max-width: 768px) and (min-width: 321px) {
+@media (min-width: 768px) and (max-width: 1439px) {
   .header {
+    min-height: 415px;
     background-image: url(../img/bg1_2.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-color: #ffffff;
+  }
+  .wrap {
+    width: 700px;
+    margin: 0 auto;
+  }
+  .headerMenu {
+    display: flex;
+    justify-content: space-between;
+  }
+  .logo {
+    height: 29px;
+  }
+  .headerPadding {
+    padding-top: 27px;
+  }
+  .headerMainMenu {
+    flex-grow: 1;
+    padding-left: 20px;
+    padding-top: 8px;
+  }
+  .headerBurger {
+    display: none;
+  }
+  .mainMenuItems {
+    display: flex;
+    justify-content: space-between;
+  }
+  .mainMenuItem {
+    list-style-type: none;
+  }
+  .mainMenuLink {
+    text-decoration: none;
+    color: #ffffff;
+    text-transform: capitalize;
+    font-weight: 400;
+    font-size: 14px;
+  }
+  .headerSendContainer {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 400px;
+  }
+  .headerHeading {
+    text-transform: uppercase;
+    font-size: 44px;
+    margin-bottom: 10px;
+    color: #ffffff;
+  }
+  .headerDescribe {
+    font-weight: 700;
+    margin-bottom: 40px;
+    font-size: 26px;
+    color: #ffffff;
+  }
+  .sendButton {
+    width: 278px;
+    height: 48px;
+    background-color: #008DCD;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 24px;
+    text-align: right;
+    padding: 10px 20px;
+    border: none;
+  }
+  .about {
+    background-color: #f7f7f7;
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+  .aboutBlock {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  }
+  .aboutImage {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    width: 100%;
+  }
+  .aboutHeading {
+    font-size: 36px;
+    font-weight: 700;
+    display: block;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .aboutDesc {
+    font-size: 14px;
+    font-weight: 400px;
+  }
+}
+@media (min-width: 1440px) {
+  .header {
+    min-height: 525px;
+    background-image: url(../img/bg1.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-color: #ffffff;
+  }
+  .wrap {
+    width: 1168px;
+    margin: 0 auto;
+  }
+  .headerMenu {
+    display: flex;
+    justify-content: space-between;
+  }
+  .logo {
+    height: 46px;
+  }
+  .headerPadding {
+    padding-top: 27px;
+  }
+  .headerMainMenu {
+    flex-grow: 1;
+    padding-left: 130px;
+    padding-top: 10px;
+  }
+  .headerBurger {
+    display: none;
+  }
+  .mainMenuItems {
+    display: flex;
+    justify-content: space-between;
+  }
+  .mainMenuItem {
+    list-style-type: none;
+  }
+  .mainMenuLink {
+    text-decoration: none;
+    color: #ffffff;
+    text-transform: capitalize;
+    font-weight: 400;
+    font-size: 18px;
+  }
+  .headerSendContainer {
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 748px;
+  }
+  .headerHeading {
+    text-transform: uppercase;
+    font-size: 48px;
+    margin-bottom: 30px;
+    color: #ffffff;
+  }
+  .headerDescribe {
+    font-weight: 700;
+    margin-bottom: 40px;
+    font-size: 36px;
+    color: #ffffff;
+  }
+  .sendButton {
+    width: 360px;
+    height: 48px;
+    background-color: #008DCD;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 24px;
+    text-align: center;
+    padding: 10px 20px;
+    border: none;
+  }
+  .about {
+    background-color: #f7f7f7;
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+  .aboutBlock {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
+  }
+  .aboutImage {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    width: 100%;
+  }
+  .aboutHeading {
+    font-size: 36px;
+    font-weight: 700;
+  }
+  .aboutDesc {
+    font-size: 16px;
+    font-weight: 400px;
   }
 }
