--- a/less/desktop.less
+++ b/less/desktop.less
@@ -1,15 +1,15 @@
 @import "__variables.less";
 @import "__mixins.less";
 .header {
-    min-height: 505px;
-    background-image: url(../img/bg1_3.jpg);
+    min-height: 525px;
+    background-image: url(../img/bg1.jpg);
     background-repeat: no-repeat;
     background-position: top;
     background-color: @mainWhite;
 }
 
 .wrap {
-    width: @mobileWrap;
+    width: @displayWrap;
     margin: 0 auto;
 }
 
@@ -19,40 +19,60 @@
 }
 
 .logo {
-    height: 29px;
+    height: 46px;
 }
 
 .headerPadding {
     padding-top: 27px;
 }
 
-.headerBurger {
-    color: @mainWhite;
+.headerMainMenu {
+    flex-grow: 1;
+    padding-left: 130px;
+    padding-top: 10px;
 }
 
-.mainMenuItems {
+.headerBurger {
     display: none;
 }
 
+.mainMenuItems {
+    display: flex;
+    justify-content: space-between;
+}
+
+.mainMenuItem {
+    list-style-type: none;
+}
+
+.mainMenuLink {
+    .siteLinks .headerDesktopLink();
+}
+
 .headerSendContainer {
-    margin-top: 240px;
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 748px;
 }
 
 .headerHeading {
     text-transform: uppercase;
-    margin-bottom: 10px;
+    font-size: 48px;
+    margin-bottom: 30px;
+    color: @mainWhite;
 }
 
 .headerDescribe {
-    font-weight: 600;
-    margin-bottom: 20px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    font-size: 36px;
+    color: @mainWhite;
 }
 
 .sendButton {
-    .buttonStyle .mobile();
+    .buttonStyle .desktop();
 }
 .sendButton:hover {
     .buttonStyle .hover();
@@ -60,39 +80,44 @@
 .sendButton:active {
     .buttonStyle .pressed();
 }
+
 .about {
     background-color: #f7f7f7;
-    margin-top: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 60px;
+    padding-bottom: 30px;
 }
 
 .aboutBlock {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
 }
 
 .aboutImage {
-    width: 278px;
-    margin-bottom: 20px;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    width: 100%;
 }
 
 .aboutHeading {
+    font-size: 36px;
     font-weight: 700;
-    font-size: 18px;
-    margin-bottom: 20px;
 }
+
 .aboutDesc {
+    font-size: 16px;
     font-weight: 400px;
-    font-size: 12px;
-    margin-bottom: 20px;
 }
 
 .stepsBlock {
     display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 100%;
+    grid-column-gap: 80px;
+    grid-row-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px 50px;
 }
 
 .step {
@@ -111,20 +136,26 @@
     font-weight: 700;
     margin-bottom: 10px;
 }
+
 .stepDesc {
-    line-height: 16px;
-    font-size: 14px;
+    line-height: 20px;
+    font-size: 16px;
     font-weight: 400;
     margin-bottom: 10px;
 }
+
 .stepResume {
     background-color: #f7f7f7;
 }
+
 .stepsResumeBlock {
-    padding: 20px 0 23px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 180px;
 }
+
 .stepResumeHeading {
-    font-size: 24px;
+    font-size: 36px;
     font-weight: 700;
-    margin-bottom: 20px;
 }
