--- a/less/__variables.less
+++ b/less/__variables.less
@@ -10,9 +10,12 @@
 @mainWhite: #ffffff;
 
 
+
 /* Sizes */
 
 @mobileMaxSize: 320px;
 @mobileWrap: 280px;
-@tabletWrap: 768px;
+@tabletMaxSize: 768px;
+@tabletWrap: 700px;
 @displayWrap: 1168px;
+@displayMaxSize: 1440px;
