--- a/less/mobile.less
+++ b/less/mobile.less
@@ -1,4 +1,5 @@
 @import "__variables.less";
+@import "__mixins.less";
 .header {
     min-height: 505px;
     background-image: url(../img/bg1_3.jpg);
@@ -10,4 +11,197 @@
 .wrap {
     width: @mobileWrap;
     margin: 0 auto;
+}
+
+.headerMenu {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    height: 29px;
+}
+
+.headerPadding {
+    padding-top: 27px;
+}
+
+.headerBurger {
+    color: @mainWhite;
+}
+
+.mainMenuItems {
+    display: none;
+}
+
+.headerSendContainer {
+    margin-top: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.headerHeading {
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.headerDescribe {
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.sendButton {
+    .buttonStyle .mobile();
+}
+
+.sendButton:hover {
+    .buttonStyle .hover();
+}
+
+.sendButton:active {
+    .buttonStyle .pressed();
+}
+
+.about {
+    background-color: #f7f7f7;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.aboutBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.aboutImage {
+    width: 278px;
+    margin-bottom: 20px;
+}
+
+.aboutHeading {
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.aboutDesc {
+    font-weight: 400px;
+    font-size: 12px;
+    margin-bottom: 20px;
+}
+
+.stepsBlock {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 100%;
+}
+
+.step {
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.stepImage {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.stepHeading {
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.stepDesc {
+    line-height: 16px;
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.stepResume {
+    background-color: #f7f7f7;
+}
+
+.stepsResumeBlock {
+    padding: 20px 0 23px;
+}
+
+.stepResumeHeading {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.callback {
+    background-color: @mainBlue;
+}
+
+.callbackBlock {
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
+.callbackHeader {
+    color: @mainWhite;
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+.callbackDesk {
+    color: @mainWhite;
+    font-weight: 400;
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.yellowButton {
+    .buttonStyle .yellowBg();
+    margin-bottom: 10px;
+}
+
+.callbackPhoneInput {
+    .textInputStyle .mobile();
+    margin-bottom: 10px;
+}
+
+.callbackPhoneInput::placeholder {
+    color: @mainWhite;
+}
+
+.callbackForm label {
+    color: @mainWhite;
+    font-weight: 400;
+    font-size: 10px;
+    display: block;
+}
+
+.callbackCheckbox {
+    display: none;
+}
+
+.callbackForm label:before {
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background-color: @mainBlue;
+    border: 1px solid @mainWhite;
+    vertical-align: middle;
+    margin: 0 10px;
+}
+
+.callbackCheckbox:checked + label::before {
+    content: "\2713";
+    font-size: 8px;
+    color: @mainWhite;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 10px;
 }
