--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,45 @@ body {
     grid-row-start: 1;
     grid-row-end: 3;
   }
+  .feedbackTitle {
+    margin: 40px 0 10px;
+    font-size: 28px;
+    font-weight: 700;
+    color: #363636;
+  }
+  .feedbackSlider {
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    padding: 20px 60px;
+  }
+  .sliderBlock {
+    position: relative;
+    margin: 0;
+    grid-template-columns: 40% 55%;
+    grid-column-gap: 5%;
+  }
+  #feedback_1:checked ~ #sliderBlock2,
+  #feedback_2:checked ~ #sliderBlock3,
+  #feedback_3:checked ~ #sliderBlock1 {
+    visibility: visible;
+  }
+  #feedback_1:checked ~ #sliderBlock3,
+  #feedback_2:checked ~ #sliderBlock1,
+  #feedback_3:checked ~ #sliderBlock2 {
+    display: none;
+  }
+  #feedback_3:checked ~ #sliderBlock3 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  #feedback_3:checked ~ #sliderBlock1 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
 }
 @media (min-width: 1440px) {
   .header {
@@ -653,5 +692,62 @@ body {
     border-radius: 24px;
     padding: 0 20px;
     border: 1px solid #ffffff;
+  }
+  .feedback {
+    height: 410px;
+  }
+  .feedbackTitle {
+    margin: 60px 0 40px;
+    font-size: 36px;
+    font-weight: 700;
+    color: #363636;
+  }
+  .feedbackSlider {
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    padding: 20px 110px;
+  }
+  .sliderBlock {
+    position: relative;
+    margin: 0;
+    grid-template-columns: 40% 55%;
+    grid-column-gap: 5%;
+  }
+  .feedbackBlockImg {
+    width: 160px;
+  }
+  .feedbackName {
+    font-size: 36px;
+  }
+  .feedbackProfession {
+    font-size: 20px;
+  }
+  .feedbackPackageType,
+  .feedbackPackageFrom,
+  .feedbackPackageTo,
+  .feedbackArticle {
+    font-size: 16px;
+  }
+  #feedback_1:checked ~ #sliderBlock2,
+  #feedback_2:checked ~ #sliderBlock3,
+  #feedback_3:checked ~ #sliderBlock1 {
+    visibility: visible;
+  }
+  #feedback_1:checked ~ #sliderBlock3,
+  #feedback_2:checked ~ #sliderBlock1,
+  #feedback_3:checked ~ #sliderBlock2 {
+    display: none;
+  }
+  #feedback_3:checked ~ #sliderBlock3 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  #feedback_3:checked ~ #sliderBlock1 {
+    grid-column-start: 2;
+    grid-column-end: 3;
   }
 }
