--- a/less/desktop.less
+++ b/less/desktop.less
@@ -74,16 +74,20 @@
 .sendButton {
     .buttonStyle .desktop();
 }
+
 .sendButton:hover {
     .buttonStyle .hover();
 }
+
 .sendButton:active {
     .buttonStyle .pressed();
 }
+
 .yellowButton {
     .buttonStyle .yellowBg();
     margin-bottom: 10px;
 }
+
 .about {
     background-color: #f7f7f7;
     padding-top: 60px;
@@ -162,6 +166,7 @@
     font-size: 36px;
     font-weight: 700;
 }
+
 .callbackBlock {
     display: grid;
     grid-template-columns: 64% 31%;
@@ -181,12 +186,85 @@
     grid-row-start: 1;
     grid-row-end: 3;
 }
+
 .callbackHeader {
     font-size: 48px;
 }
+
 .callbackDesk {
     font-size: 24px;
 }
+
 .callbackPhoneInput {
     .textInputStyle .desktop();
+}
+
+.feedback {
+    height: 410px;
+}
+
+.feedbackTitle {
+    margin: 60px 0 40px;
+    font-size: 36px;
+    font-weight: 700;
+    color: @mainDarkGrey;
+}
+
+.feedbackSlider {
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    padding: 20px 110px;
+}
+
+.sliderBlock {
+    position: relative;
+    margin: 0;
+    grid-template-columns: 40% 55%;
+    grid-column-gap: 5%;
+
+}
+
+.feedbackBlockImg {
+    width: 160px;
+}
+
+.feedbackName {
+    font-size: 36px;
+}
+
+.feedbackProfession {
+    font-size: 20px;
+}
+
+.feedbackPackageType,
+.feedbackPackageFrom,
+.feedbackPackageTo,
+.feedbackArticle {
+    font-size: 16px;
+}
+
+#feedback_1:checked ~ #sliderBlock2,
+#feedback_2:checked ~ #sliderBlock3,
+#feedback_3:checked ~ #sliderBlock1 {
+    visibility: visible;
+}
+
+#feedback_1:checked ~ #sliderBlock3,
+#feedback_2:checked ~ #sliderBlock1,
+#feedback_3:checked ~ #sliderBlock2 {
+    display: none;
+}
+
+#feedback_3:checked ~#sliderBlock3 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+#feedback_3:checked ~#sliderBlock1 {
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
